--- a/css/style.css
+++ b/css/style.css
@@ -529,7 +529,7 @@ color: #777;
 
 df-messenger {
 	--df-messenger-bot-message: #878fac;
-	--df-messenger-button-titlebar-color: #df9b56;
+	--df-messenger-button-titlebar-color: #4285F4;
 	--df-messenger-chat-background-color: #fafafa;
 	--df-messenger-font-color: white;
 	--df-messenger-send-icon: #878fac;
